@startuml

package "math" {

    class AbstractNumber
    class Nummer
    class PackedDecimal
    class Bruch
    class Primzahl
    class Promille
    class Prozent

}

interface java.lang.Number #white

java.lang.Number <|-- AbstractNumber
java.lang.Number <|-- Primzahl
AbstractNumber <|-- Nummer
AbstractNumber <|-- PackedDecimal
AbstractNumber <|-- Bruch
AbstractNumber <|-- Prozent
Prozent <|-- Promille

@enduml
